test/types/records/lydia/offsetNotRecord-sync.good
offsetNotRecord-sync.chpl:1: error: Cannot call c_offsetof on type that is not a record
