test/types/records/lydia/offsetNotRecord-sync.chpl
writeln(c_offsetof(sync int, "wrapped"));
